# flutter_notemus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: deploy-github-pages.yml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  native_audio_engine.cpp
doc/: IMPLEMENTATION_GUIDE_LRU_CACHE.md  OPEN_ISSUES.md  PROGRESS_REPORT_2025-11-06.md
docs/: MAGIC_NUMBERS_REFERENCE.md  MEI_V5_AUDIT.md  json_schema.md
example/: .gitignore  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_notemus.podspec
ios/Classes/: FlutterNotemusPlugin.swift
ios/flutter_notemus/: Package.swift
lib/: flutter_notemus.dart  flutter_notemus_web.dart
lib/core/: articulation.dart  barline.dart  beam.dart  breath.dart  chord.dart  clef.dart  cluster.dart  core.dart  duration.dart  dynamic.dart  figured_bass.dart  harmonic_analysis.dart  key_signature.dart  line.dart  measure.dart  mei_header.dart  mensural.dart  musical_element.dart  neume.dart  note.dart  octave.dart  ornament.dart  pitch.dart  repeat.dart  rest.dart  score.dart  score_def.dart  slur.dart  space.dart  staff.dart  staff_group.dart  (+9 more)
linux/: CMakeLists.txt  flutter_notemus_plugin.cc  flutter_notemus_plugin_private.h
macos/: flutter_notemus.podspec
test/: README.md  spacing_test.dart  staff_position_calculator_test.dart
windows/: .gitignore  CMakeLists.txt  flutter_notemus_plugin.cpp  flutter_notemus_plugin.h  flutter_notemus_plugin_c_api.cpp
windows/include/flutter_notemus/: flutter_notemus_plugin_c_api.h
(+127 files in other folders)
